[FIX] tests moved to core module, added DomainServiceImplTest